--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -3,6 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Banner Effect Demo - 轩枫阁</title>
+    <style>
+        *{margin: 0;padding: 0;}
+        body{
+            overflow: hidden;
+        }
+        #footer{
+            width: 100%;
+            margin-top: 50px;
+            text-align: center;
+            color: #333;
+            font-family: "Microsoft Yahei";
+            font-size: 14px;
+        }
+    </style>
 	<link rel="stylesheet" href="../css/style-banner.css">
 </head>
 <body>
